--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,5 @@
 body{ 
 	font: normal 13px/20px Arial, Helvetica, sans-serif; word-wrap:break-word;
-	color: #eee;
-	background: #353535;
 }
 #countdown{
 	width: 465px;
@@ -25,7 +23,7 @@ body{
 	content:"";
 	width: 8px;
 	height: 65px;
-	background: #444;
+	background: #fff;
 	background-image: -webkit-linear-gradient(top, #555, #444, #444, #555); 
 	background-image:    -moz-linear-gradient(top, #555, #444, #444, #555);
 	background-image:     -ms-linear-gradient(top, #555, #444, #444, #555);
@@ -42,7 +40,7 @@ body{
 	content:"";
 	width: 8px;
 	height: 65px;
-	background: #444;
+	background: #111;
 	background-image: -webkit-linear-gradient(top, #555, #444, #444, #555); 
 	background-image:    -moz-linear-gradient(top, #555, #444, #444, #555);
 	background-image:     -ms-linear-gradient(top, #555, #444, #444, #555);
@@ -66,7 +64,7 @@ body{
 	font: bold 48px 'Droid Sans', Arial, sans-serif;
 	text-align: center;
 	color: #111;
-	background-color: #ddd;
+	background-color: #fff;
 	background-image: -webkit-linear-gradient(top, #bbb, #eee); 
 	background-image:    -moz-linear-gradient(top, #bbb, #eee);
 	background-image:     -ms-linear-gradient(top, #bbb, #eee);
@@ -96,8 +94,8 @@ body{
 	content:"";
 	width: 100%;
 	height: 1px;
-	background: #eee;
-	border-top: 1px solid #333;
+	background: #fff;
+	border-top: 1px solid rgb(66, 66, 66);
 	display: block;
 	position: absolute;
 	top: 48%; left: 0;
@@ -114,7 +112,7 @@ body{
 #countdown .labels li{
 	width: 102px;
 	font: bold 15px 'Droid Sans', Arial, sans-serif;
-	color: #f47321;
+	color: #fff;
 	text-shadow: 1px 1px 0px #000;
 	text-align: center;
 	text-transform: uppercase;
